...
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--<com.google.android.exoplayer2.ui.PlayerView-->
        <!--android:id="@+id/player_view"-->
        <!--android:layout_width="match_parent"-->
...
            android:gravity="center"
            android:textAlignment="gravity"
            android:layout_weight="1"
            android:onClick="onClickPreviousButton" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_title"
            android:textAlignment="gravity"
            android:drawableRight="@drawable/ic_arrow_next_black_24dp"
            android:drawableEnd="@drawable/ic_arrow_next_black_24dp"
...
