<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_recipe_short_desc_list"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>