<resources>
    <string name="app_name">BakingApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recipe_detail">RecipeDetailActivity</string>
    <string name="title_activity_ingredient">Ingredients</string>
    <string name="title_activity_step">Steps</string>

    <string name="main_activity_title">Recipe List</string>

    <!-- Default Ingredients -->
    <string name="default_ingredient_name">Milk</string>
    <string name="default_ingredient_amount">1 cup</string>
    <string name="default_step_instruction">Salt, Sugar</string>

    <!-- Button titles -->
    <string name="previous_button_title">Previous</string>
    <string name="next_button_title">Next</string>

    <!--widget-->
    <string name="widget_recipe_name">Recipe Name</string>
    <string name="empty_text">Ingredients Unavailable</string>
    <string name="ingredient_amount">%f %s</string>

</resources>
